--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@fairdatasociety/fdp-storage",
+  "name": "@zzz/aaa",
   "version": "0.2.0",
-  "description": "Typescript implementation of FairOS-dfs",
+  "description": "wefwe",
   "keywords": [
     "fairdata",
     "swarm",
