--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,13 +5,13 @@ name: Release Github
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
-      - uses: google-github-actions/release-please-action@v3
+      - uses: GoogleCloudPlatform/release-please-action@v2
         id: release
         with:
           token: ${{ secrets.REPO_GHA_PAT }}
